# monolake

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  mkdocs.yml  wiki.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmark-sanity.yaml  build.yaml
benchmark/: README.md  benchmark-pipeline.sh  performance-collect.sh  pipeline-client-envoy.sh  pipeline-client-monolake.sh  pipeline-client-nginx.sh  pipeline-client-traefik.sh  pipeline-proxy-envoy.sh  pipeline-proxy-monolake.sh  pipeline-proxy-nginx.sh  pipeline-proxy-traefik.sh  pipeline-proxy.sh  pipeline-server.sh
benchmark/client/: benchmark-envoy-http.sh  benchmark-envoy-https.sh  benchmark-monolake-16core-http.sh  benchmark-monolake-16core-https.sh  benchmark-monolake-http.sh  benchmark-monolake-https.sh  benchmark-nginx-16core-http.sh  benchmark-nginx-16core-https.sh  benchmark-nginx-http.sh  benchmark-nginx-https.sh  benchmark-traefik-16core-http.sh  benchmark-traefik-16core-https.sh  benchmark-traefik-http.sh  benchmark-traefik-https.sh  setup-once.sh  verify-setup.sh
benchmark/images/README/: proxies-setup.drawio
benchmark/proxy/: setup-once.sh  start-envoy.sh  start-monolake.sh  start-nginx.sh  start-traefik.sh  stop-envoy.sh  stop-monolake.sh  stop-nginx.sh  stop-traefik.sh  update-server-ip.sh
benchmark/proxy/envoy/: envoy.yaml  setup-once.sh
benchmark/proxy/monolake/: monolake.toml  setup-once.sh
benchmark/proxy/nginx/: nginx.conf  setup-once.sh
benchmark/proxy/traefik/: setup-once.sh  traefik-dynamic.toml  traefik-static.toml
benchmark/server/: nginx-web.conf  setup-once.sh
benchmark/server/webroot/server2/: index.html
benchmark/server/webroot/server3/: index.html
benchmark/server/webroot/server4/: index.html
benchmark/server/webroot/server5/: index.html
benchmark/visualization/: all-http-latency-plot.sh  all-https-latency-plot.sh  envoy-http-latency-plot.sh  envoy-https-latency-plot.sh  latency-plot.sh  monolake-http-latency-plot.sh  monolake-https-latency-plot.sh  nginx-http-latency-plot.sh  nginx-https-latency-plot.sh  performance-csv-convert.py  performance-plot.sh  proxies-performance-plot.sh  traefik-http-latency-plot.sh  traefik-https-latency-plot.sh
docs/: _index.md  index.md  index.rst  install.md  intro.md  monolake.md  wiki_on_cloudwego.md
docs/FAQ/: _index.md
docs/Getting Started/: _index.md
docs/Overview/: _index.md
docs/Reference/: _index.md
docs/cloudwego/FAQ/: _index.md
docs/cloudwego/Getting Started/: _config.md  _index.md
docs/cloudwego/Overview/: _index.md
examples/: LICENSE-THIRD-PARTY  README.md  config.toml  gen_cert.sh  thrift.toml
monolake/: Cargo.toml
monolake-core/: Cargo.toml  LICENSE-MIT
monolake-core/src/: context.rs  error.rs  lib.rs  listener.rs
monolake-core/src/config/: config.rs  extrator.rs  mod.rs  parsers.rs
monolake-core/src/context/: mod.rs
monolake-core/src/environments/: known_keys.rs  mod.rs  value.rs
monolake-core/src/http/: mod.rs  rewrite.rs
monolake-core/src/orchestrator/: mod.rs  runtime.rs  service_executor.rs  worker_manager.rs
monolake-core/src/server/: manager.rs  mod.rs  runtime.rs  site.rs
monolake-core/src/service/: layer.rs  map.rs  mod.rs  param.rs  stack.rs
monolake-core/src/thrift/: mod.rs
monolake-core/src/tls/: mod.rs
monolake-core/src/util/: hash.rs  mod.rs  uri_serde.rs
monolake-services/: Cargo.toml
monolake-services/src/: lib.rs  serve.rs
monolake-services/src/common/: context.rs  delay.rs  detect.rs  erase.rs  map.rs  mod.rs  panic.rs  selector.rs  timeout.rs
monolake-services/src/common/cancel/: linked_list.rs  mod.rs
monolake-services/src/http/: core.rs  detect.rs  mod.rs  util.rs
monolake-services/src/http/handlers/: conn_reuse.rs  connection_persistence.rs  content_handler.rs  mod.rs  openid.rs  proxy.rs  rewrite.rs  route.rs  upstream.rs
monolake-services/src/hyper/: mod.rs
monolake-services/src/proxy_protocol/: mod.rs
monolake-services/src/tcp/: echo.rs  listener.rs  mod.rs  toy_echo.rs
monolake-services/src/thrift/: mod.rs  ttheader.rs
monolake-services/src/thrift/handlers/: mod.rs  proxy.rs
monolake-services/src/tls/: mod.rs  nativetls.rs  rustls.rs
monolake-services/src/uds/: listener.rs  mod.rs
monolake/src/: context.rs  factory.rs  main.rs  util.rs
monolake/src/config/: extractor.rs  manager.rs  mod.rs
monolake/src/runtimes/: mod.rs  runtimes.rs  wrapper.rs
monolake/src/server/: mod.rs  runtime.rs
monolake/src/servers/: mod.rs  servers.rs  tcp_server.rs  uds_server.rs
