[workspace]
members = ["monolake", "monolake-core", "monolake-services"]
resolver = "2"

[workspace.dependencies]
monoio = "0.2.0"
monoio-codec = "0.3"
monoio-http = "0.3.1"
monoio-thrift = { git = "https://github.com/monoio-rs/monoio-thrift.git", branch = "master" }
monoio-transports = "0.3.0"
monoio-native-tls = "0.3.0"
monoio-rustls = "0.3.0"
native-tls = "0.2"
service-async = "0.2.3"
certain-map = "0.2.4"
local-sync = "0.1"
http = "1.0"
anyhow = "1"
serde = "1"
tracing = "0.1"
bytes = "1"

[profile.release-lto]
inherits = "release"
lto = true
