[workspace]
members = ["monolake", "monolake-core", "monolake-services"]
resolver = "2"

[workspace.dependencies]
monoio = "0.2.2"
monoio-codec = "0.3"
monoio-http = "0.3.5"
monoio-thrift = "0.1.1"
monoio-transports = "0.4.2"
monoio-native-tls = "0.3.0"
monoio-rustls = "0.3.0"
native-tls = "0.2"
service-async = "0.2.3"
certain-map = "0.2.4"
local-sync = "0.1"
http = "1.0"
anyhow = "1"
serde = "1"
tracing = "0.1"
bytes = "1"

[profile.release-lto]
inherits = "release"
lto = true
