[package]
name = "monolake-core"
version = "0.2.0"
edition = "2021"

[features]
openid = []
proxy-protocol = []

[dependencies]
monoio = { workspace = true, features = ['splice'] }
monoio-http = { workspace = true }
service-async = { workspace = true }

anyhow = "1"
tracing = "0.1"

# futures
futures-util = { version = "0.3", features = ["sink"] }
futures-channel = { version = "0.3", features = ["sink"] }

http = "0.2"
http-serde = "1"
serde = "1"

sha2 = "0"
hex = "0"
derive_more = "0.99.0"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6"
