[package]
name = "monolake-core"
version = "0.3.0"
edition = "2021"

[features]
openid = []
proxy-protocol = []

[dependencies]
monoio = { workspace = true, features = ["splice", "sync"] }
monoio-http = { workspace = true }
monoio-thrift = { workspace = true }
service-async = { workspace = true }
http = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
bytes = { workspace = true }

# futures
futures-util = { version = "0.3", features = ["sink"] }
futures-channel = { version = "0.3", features = ["sink"] }

sha2 = "0"
hex = "0"
derive_more = "0.99.0"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6"
