[package]
name = "monolake-core"
version = "0.3.0"
description = "MonoLake Core Abstraction and Utils"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[features]
openid = []
proxy-protocol = []
hyper = ["monoio/poll-io"]

[dependencies]
monoio = { workspace = true, features = ["splice", "sync"] }
monoio-http = { workspace = true }
monoio-thrift = { workspace = true }
service-async = { workspace = true }
http = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
bytes = { workspace = true }

# futures
futures-util = { version = "0.3", features = ["sink"] }
futures-channel = { version = "0.3", features = ["sink"] }

sha2 = "0"
hex = "0"
derive_more = "0.99.0"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6"
