[package]
name = "monolake-services"
version = "0.1.1"
edition = "2021"

[features]
openid = [
    "dep:cookie",
    "dep:openidconnect",
    "dep:thiserror",
    "dep:url",
    "dep:lazy_static",
]
proxy-protocol = ["dep:proxy-protocol"]

[dependencies]
monoio = { version = "0.1.5", features = ['splice'] }
monolake-core = { path = "../monolake-core" }
monoio-http = { version = "0.2.2" }
monoio-http-client = { version = "0.2.2", features = ["logging", "rustls"] }
local-sync = "0.1"
service-async = "0.1.9"

# tls
monoio-rustls = "0.1.5"
rustls = { version = "0.21" }
rustls-pemfile = "1"
webpki-roots = "0.23"
monoio-native-tls = "0.1.0"
native-tls = "0.2"

# common
anyhow = "1"
tracing = "0.1"
http = "0.2"
bytes = "1"

http-serde = "1"
serde = "1"

async-channel = "1"
rand = "0.8"
matchit = "0.7"
pin-project-lite = "0.2"
futures = "0.3"

# for openid
cookie = { version = "0.17", optional = true }
openidconnect = { version = "3.0.0", optional = true }
thiserror = { version = "1.0.24", optional = true }
url = { version = "2.3.1", optional = true }
lazy_static = { version = "1.4.0", optional = true }

# for proxy protocol
proxy-protocol = { version = "0.5.0", optional = true }
