[package]
name = "monolake-services"
version = "0.1.1"
edition = "2021"

[features]
openid = [
    "dep:cookie",
    "dep:openidconnect",
    "dep:thiserror",
    "dep:url",
    "dep:lazy_static",
]
proxy-protocol = ["dep:proxy-protocol"]
tls = [
    "dep:monoio-rustls",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:webpki-roots",
    "dep:monoio-native-tls",
    "dep:native-tls",
]
vendored = ["native-tls?/vendored"]

[dependencies]
monoio = { workspace = true, features = ['splice'] }
monolake-core = { path = "../monolake-core" }
monoio-http = { workspace = true }
monoio-http-client = { workspace = true, features = ["logging", "rustls"] }
local-sync = { workspace = true }
service-async = { workspace = true }

# tls
monoio-rustls = { workspace = true, optional = true }
rustls = { version = "0.21", optional = true }
rustls-pemfile = { version = "1", optional = true }
webpki-roots = { version = "0.23", optional = true }
monoio-native-tls = { workspace = true, optional = true }
native-tls = { workspace = true, optional = true }

# common
anyhow = "1"
tracing = "0.1"
http = "0.2"
bytes = "1"

http-serde = "1"
serde = "1"

async-channel = "1"
rand = "0.8"
matchit = "0.7"
pin-project-lite = "0.2"
futures = "0.3"

# for openid
cookie = { version = "0.17", optional = true }
openidconnect = { version = "3.0.0", optional = true }
thiserror = { version = "1.0.24", optional = true }
url = { version = "2.3.1", optional = true }
lazy_static = { version = "1.4.0", optional = true }

# for proxy protocol
proxy-protocol = { version = "0.5.0", optional = true }
