[package]
name = "monolake-services"
version = "0.3.2"
edition = "2021"

[features]
default = []
openid = [
    "tls",
    "dep:cookie",
    "dep:openidconnect",
    "dep:thiserror",
    "dep:url",
    "dep:lazy_static",
]
proxy-protocol = ["dep:proxy-protocol"]
tls = [
    "dep:monoio-rustls",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:webpki-roots",
    "dep:monoio-native-tls",
    "dep:native-tls",
]
vendored = ["native-tls?/vendored"]
hyper = [
    "dep:hyper",
    "dep:hyper-util",
    "dep:monoio-compat",
    "monoio/poll-io",
    "monoio-compat/hyper",
    "monolake-core/hyper",
]

[dependencies]
monoio = { workspace = true, features = ['splice'] }
monolake-core = { path = "../monolake-core" }
monoio-codec = { workspace = true }
monoio-http = { workspace = true }
monoio-thrift = { workspace = true }
monoio-transports = { workspace = true, features = [
    "logging",
    "rustls-unsafe-io",
] }
local-sync = { workspace = true }
service-async = { workspace = true }
http = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

# tls
monoio-rustls = { workspace = true, optional = true }
monoio-native-tls = { workspace = true, optional = true }
native-tls = { workspace = true, optional = true }

rustls = { version = "0.21", optional = true, default-features = false }
rustls-pemfile = { version = "1", optional = true }
webpki-roots = { version = "0.25.2", optional = true }

hyper = { version = "1.1", features = [
    "http1",
    "client",
    "server",
], optional = true }
hyper-util = { version = "0.1.3", features = [
    "http1",
    "client",
    "server-auto",
], optional = true }
monoio-compat = { version = "0.2.2", features = ["hyper"], optional = true }

# common
bytes = { workspace = true }
# async-channel = "1"
rand = "0.8"
matchit = "0.7"
pin-project-lite = "0.2"
futures = "0.3"

# for openid
cookie = { version = "0.18", optional = true }
openidconnect = { version = "3", optional = true }
thiserror = { version = "1.0.24", optional = true }
url = { version = "2.3.1", optional = true }
lazy_static = { version = "1.4.0", optional = true }

# for proxy protocol
proxy-protocol = { version = "0.5.0", optional = true }
