[package]
name = "monolake"
version = "0.2.0"
edition = "2021"
keywords = ["monoio", "http", "async"]
description = "High Performance Proxy base on Monoio"

[features]
default = ["tls"]
openid = ["monolake-core/openid", "monolake-services/openid"]
proxy-protocol = [
    "monolake-core/proxy-protocol",
    "monolake-services/proxy-protocol",
]
tls = ["dep:monoio-native-tls", "monolake-services/tls", "native-tls/vendored"]

[dependencies]
monoio = { workspace = true, features = ["sync", "async-cancel"] }
service-async = { workspace = true }
certain-map = { workspace = true }

monolake-core = { path = "../monolake-core" }
monolake-services = { path = "../monolake-services" }

# tls: needed for native-tls init
native-tls = { workspace = true, optional = true }
monoio-native-tls = { workspace = true, optional = true }

# error
anyhow = "1"

# log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# parse
clap = { version = "4", features = ['derive'] }
serde = "1"
serde_json = "1"
toml = "0"
