[package]
name = "monolake"
version = "0.3.0"
edition = "2021"
keywords = ["monoio", "http", "async"]
description = "High Performance Proxy base on Monoio"

[features]
default = ["tls"]
openid = ["monolake-core/openid", "monolake-services/openid"]
proxy-protocol = [
    "monolake-core/proxy-protocol",
    "monolake-services/proxy-protocol",
]
tls = ["dep:monoio-native-tls", "monolake-services/tls"]
vendored = ["monolake-services/vendored"]

[dependencies]
monoio = { workspace = true, features = ["sync", "async-cancel"] }
service-async = { workspace = true }
certain-map = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

monolake-core = { path = "../monolake-core" }
monolake-services = { path = "../monolake-services" }

# tls: needed for native-tls init
native-tls = { workspace = true, optional = true }
monoio-native-tls = { workspace = true, optional = true }

# log
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# parse
clap = { version = "4", features = ['derive'] }
serde_json = "1"
toml = "0"
